[workspace]
resolver = "2"
members = [
	"base",
	"pallets/dactr",
	"pallets/mandate",
	"pallets/system",
	"pallets/vector",
	"patricia-merkle-trie",
	"client/basic-authorship",
	"runtime",
	"runtime/fuzz",
	"node",
]

[workspace.package]
authors = ["Avail Project <info@availproject.org>"]
edition = "2021"
repository = "https://github.com/availproject/avail"
license = "GNU GPLv3"
homepage = "https://www.availproject.org/"


[workspace.dependencies]
avail-core = { git = "https://github.com/availproject/avail-core", tag = "node-v2230-rc2", default-features = false, features = [ "runtime"] }
kate = { git = "https://github.com/availproject/avail-core", tag = "node-v2230-rc2", default-features = false }
kate-recovery = { git = "https://github.com/availproject/avail-core", tag = "node-v2230-rc2", default-features = false  }
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
alloy-primitives = { version= "0.7.7", features=[ "serde"] }
common = {git = "https://github.com/a16z/helios.git"}
consensus-core = {git = "https://github.com/a16z/helios.git"}
serde_cbor = "0.11.2"
# avail-core = { path = "../avail-core/core", default-features = false, features = [ "runtime"] }
# kate = { path = "../avail-core/kate/", default-features = false }
# kate-recovery = { path = "../avail-core/kate/recovery/", default-features = false}

avail-base = { path = "base", default-features = false }
da-control = { path = "pallets/dactr", default-features = false }
pallet-mandate = { path = "pallets/mandate", default-features = false }
pallet-vector = { path = "pallets/vector", default-features = false }
da-runtime = { path = "runtime", default-features = false }
kate-rpc = { path = "rpc/kate-rpc" }
testing-rpc = { path = "rpc/testing-rpc" }
patricia-merkle-trie = { path = "patricia-merkle-trie", default-features = false }

sc-basic-authorship = { path = "client/basic-authorship", default-features = false }
frame-system = { path = "pallets/system", default-features = false }
frame-system-rpc-runtime-api = { path = "pallets/system/rpc/runtime-api", default-features = false }
frame-system-benchmarking = { path = "pallets/system/benchmarking", default-features = false }


# benchmarking
criterion = { version = "0.4", default-features = false }
iai = "0.1.1"
iai-callgrind = "0.7.3" 
divan = "0.1.11"

# codspeed-criterion-compat = "2.2.0"

# Logging and testing 
log = "0.4.20"
test-case = "1.2.3"
hex = "0.4"
env_logger = "0.9.1"
thiserror-no-std = "2.0.2"

# Futures, async and multi-threading
futures = "0.3.21"
futures-timer = "3.0.1"
parking_lot = "0.12.1"
once_cell = "1.17.1"
async-trait = "0.1.74"
rayon = "1.5.2"

# Macros and code generation
hex-literal = "0.3.4"
static_assertions = "1.1.0"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive","serde"] }
cfg-if = "1.0"
impl-trait-for-tuples = "0.2.1"
docify = "0.2.6"

# Encryptions and hashing
sha2 = { version = "0.10.8", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.3.0", default-features = false }
ark-ec = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", features = ["derive"], default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-snark = "0.4.0"
rand = "0.8"

# Misc
parity-util-mem = { version = "0.12.0", features = ["primitive-types"], default-features = false }
array-bytes = "6.1"
trie-db = { version = "0.24.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.30.0", default-features = false }
bounded-collections = { version = "0.2", default-features = false }
itertools = { version = "0.10.5", default-features = false }
jsonrpsee = { version = "0.20.3", features = ["server", "client", "macros"] }
moka = { version = "0.12.1", features = ["future"] }
lru = "0.7.2"
tempfile = "3.1.0"

# Ethereum
rlp = { git = "https://github.com/paritytech/parity-common.git", tag = "rlp-v0.5.2", default-features = false }
rlp-derive = "0.1.0"
primitive-types = { version = "0.12.0", default-features = false }
ethabi = { version = "18.0.0", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }

# Cli
clap = { version = "4.4.17", features = ["derive"] }
clap-num = "1.1.1"
clap_complete = "4.0.2"

# Polkadot 
frame-executive = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
frame-support = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-babe = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-balances = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-timestamp = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-keyring = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-arithmetic = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
frame-benchmarking = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-utility = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-client-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-blockchain = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
frame-try-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-tracing = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-inherents = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-version = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-weights = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-storage = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-assets = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-authorship = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-asset-conversion = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-collective = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-externalities = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-runtime-interface = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
binary-merkle-tree = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-staking = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-staking = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false } 
sp-consensus-grandpa = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-authority-discovery = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-consensus-babe = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-genesis-builder = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-transaction-pool = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-offchain = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-session = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-block-builder = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-npos-elections = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-session = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-im-online = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-grandpa = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-scheduler = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-indices = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-offences = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-treasury = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-bounties = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-sudo = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-authority-discovery = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-tips = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-bags-list = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
frame-election-provider-support = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-democracy = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-mmr = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-multisig = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-preimage = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-nomination-pools = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-identity = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-proxy = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-tx-pause = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-transaction-payment = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
pallet-staking-reward-fn = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
substrate-wasm-builder = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-cli = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-statement-store = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-executor = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-service = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-storage-monitor = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-telemetry = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-keystore = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-keystore = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-transaction-pool = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus-babe-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-consensus = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-offchain = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus-grandpa-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-timestamp = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus-babe = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-consensus-slots = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-network = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-authority-discovery = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-chain-spec = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-client-db = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-sync-state-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-sysinfo = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-network-common = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-network-sync = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
mmr-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-rpc-api = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sc-rpc-spec-v2 = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
substrate-state-trie-migration-rpc = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
try-runtime-cli = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
substrate-build-script-utils = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-trie = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }
sp-state-machine = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7", default-features = false }


sc-block-builder = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
sc-proposer-metrics = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
substrate-prometheus-endpoint = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }
# substrate-test-runtime-client = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }


# Patch from forked pallets
[patch."https://github.com/availproject/polkadot-sdk.git"]
frame-system = { path = "pallets/system" }
frame-system-benchmarking = { path = "pallets/system/benchmarking" }
frame-system-rpc-runtime-api = { path = "pallets/system/rpc/runtime-api" }

[patch."https://github.com/paritytech/polkadot-sdk"]
sp-crypto-ec-utils = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-7" }

[patch.crates-io]
# Other stuff
uint = { git = "https://github.com/paritytech/parity-common.git", tag = "uint-v0.9.5" }
rlp = { git = "https://github.com/paritytech/parity-common.git", tag = "rlp-v0.5.2" }

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic


## CLI


# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
# crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
