[workspace]

[package]
name = "avail-rust"
edition = "2021"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
derive_more = { version = "1", features = ["full"] }
kate-recovery = {  git = "https://github.com/availproject/avail-core", tag = "core-node-4", features = ["serde"] }
subxt = { version = "0.38.0" }
subxt-core = { version = "0.38.0" }
subxt-signer = { version = "0.38.0" }
tokio = { version = "1.21.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
derive_more = { version = "1", default-features = false, features = ["from", "constructor"] }
kate-recovery = {  git = "https://github.com/availproject/avail-core", default-features = false, tag = "core-node-4", features = ["serde"] }
subxt = { version = "0.38.0", default-features = false, features = ["web", "jsonrpsee"] }
subxt-core = { version = "0.38.0", default-features = false }
subxt-signer = { version = "0.38.0", default-features = false, features = ["web", "sr25519", "subxt"] }
tokio = { version = "1.21.2", default-features = false }
sp-io = { version = "30", default-features = false, features = [ "disable_panic_handler" ] }

[dependencies]
serde = { version = "1.0.195", features = ["derive", ] }
serde_json = { version = "1.0.124" }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
	"full",
	"bit-vec",
] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }
avail-core = {  git = "https://github.com/availproject/avail-core", tag = "core-node-4", default-features = false, features = ["serde", "runtime"] }
hex = { version = "0.4" }
base58 = { version = "0.2.0" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "9fb27e7926940a4f6c570d658f1a7efe54360d80", default-features = false }
bounded-collections = { version = "0.2.0", features = ["serde"] }
primitive-types = { version = "0.13.1", default-features = false }

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "9fb27e7926940a4f6c570d658f1a7efe54360d80" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "9fb27e7926940a4f6c570d658f1a7efe54360d80" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "9fb27e7926940a4f6c570d658f1a7efe54360d80" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "9fb27e7926940a4f6c570d658f1a7efe54360d80" }

[features]
reconnecting-rpc-client = ["subxt/reconnecting-rpc-client"]
