[package]
name = "avail-subxt"
version = "0.4.0"
authors = ["Luka Borkovic <luka.borkovic@ethernal.tech>"]
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for ..."

# Dependencies
[dependencies]
derive_more = "0.99.17"
structopt = "0.3.25"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["process", "fs", "rt-multi-thread"] }
futures = "0.3.25"
jsonrpsee = { version = "0.16.2", features = ["client", "async-client", "macros"] }
num_enum = "0.5.9"
hex = "0.4"
curve25519-dalek = "2.1.3"
schnorrkel = "0.9.1"
serde = { version = "1.0.195", features = ["derive"] }
serde-hex = "0.1"
avail-core = { git = "https://github.com/availproject/avail-core", branch = "main", features = ["serde"]}

# Development Dependencies
[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.13"
hex-literal = "0.3.4"
test-case = "1.2.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
derive_more = "0.99.17"
serde_json = "1.0"
indicatif = "0.17"

# Patch Operations
[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-v1.6.0-patch" }

# Features
[features]
default = ["api-dev", "std"]
api-dev = []
api-main = []
std = ["codec/std", "sp-core/std"]

# Workspace
[workspace]
