[package]
name = "avail-subxt"
version = "0.5.0"
edition = "2021"
authors = ["Avail Project <info@availproject.org>"]
homepage = "https://www.availproject.org/"
license = "Apache-2.0"

[lib]
name = "avail_subxt"
path = "src/lib.rs"

[[bin]]
name = "e2e"
path = "src/e2e.rs"

[dependencies]
avail-base = { path = "../base" }
avail-core = { git = "https://github.com/availproject/avail-core", rev = "a264105135c4807e63f4ab50b7316e2cfd2c62a8", features = ["serde"] }
# avail-core = { path = "../../avail-core/core", features = ["serde"] }

# Other
derive_more = "0.99.17"
structopt = "0.3.25"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["process", "fs", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3.25"
jsonrpsee = { version = "0.22", features = [
	"client",
	"async-client",
	"macros",
] }
num_enum = "0.5.9"
hex = "0.4"
curve25519-dalek = "2.1.3"
schnorrkel = "0.9.1"
serde = { version = "1.0.195", features = ["derive", ] }
serde-hex = "0.1"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

# Substrate
subxt = "0.34"
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c", default-features = false }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
	"full",
	"bit-vec",
] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }
bounded-collections = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
avail-core = {  git = "https://github.com/availproject/avail-core", rev = "a264105135c4807e63f4ab50b7316e2cfd2c62a8", features = ["serde", "runtime"] }
# avail-core = { path = "../../avail-core/core", features = ["serde"] }

async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = "0.3.13"
hex-literal = "0.3.4"
test-case = "1.2.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
derive_more = "0.99.17"
indicatif = "0.17"
rand = "0.8.5"

# Substrate 
sp-keyring = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }
binary-merkle-tree = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c", default-features = false }
subxt-signer = "0.34"

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }
subxt = { git = "https://github.com/ToufeeqP/subxt.git", rev = "c4d8cb3cba5d86fc164fc912cb456870e9a2d1d2" }
# frame-metadata = { git = "https://github.com/availproject/polkadot-sdk.git", rev = "6899f04ba1559296b74c3c837a6c929c56f3f84c" }


[features]
default = [ "api-dev", "native", "std" ]
api-dev = []
api-main = []
std = [ "codec/std", "sp-core/std" ]
native = [ "subxt/native" ]

[workspace]
