[package]
name = "avail-base"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Our crates
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }

# Substrate related
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# sc-client-api = { workspace = true, default-features = false }
# sp-externalities = { workspace = true, default-features = false }

substrate-prometheus-endpoint = { workspace = true, optional = true }

# 3rd-party
log.workspace = true
once_cell = { workspace = true, default-features = false, optional = true }
hex-literal.workspace = true

[features]
default = ["std"]
std = [
	"avail-core/std",
	"codec/std",
	"kate/std",
	"once_cell",
	"sp-core/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-inherents/std",
	# "sp-externalities/std",
	"substrate-prometheus-endpoint",
]
